tests/negative/typecheck/try_function_not_error.orng
fn main() -> (ok: Int | err: Char) {
    try f()
    .ok(4)
}

fn f() -> Char!Int {
    return .err('d')
}